2010-11-05  Eli Zaretskii  <eliz@gnu.org>

	* dispnew.c (init_display): Setup initial frame's output_data for
	text terminal frames.

	* frame.h (MOUSE_HL_INFO): Fix TTY definition.

	* dispextern.h (tty_draw_row_with_mouse_face): Add prototype.

	* xdisp.c (draw_row_with_mouse_face): Don't #ifdef away on MSDOS.
	Call tty_draw_row_with_mouse_face on MSDOS as well.

	* msdos.c (tty_draw_row_with_mouse_face): Renamed from
	draw_row_with_mouse_face.  Make the argument list identical with
	GPM implementation.

	* msdos.h (Display_Info): Restore typedef.
	(initialize_msdos_display): Add prototype.

2010-11-02  Eli Zaretskii  <eliz@gnu.org>

	* term.c: Remove static mouse_face_* variables.  All users
	changed.
	(term_show_mouse_face, term_clear_mouse_face)
	(fast_find_position, term_mouse_highlight): Functions deleted.
	(tty_draw_row_with_mouse_face): New function.
	(term_mouse_movement): Call note_mouse_highlight instead of
	term_mouse_highlight.

2010-11-01  Eli Zaretskii  <eliz@gnu.org>

	* msdos.c (dos_set_window_size, draw_row_with_mouse_face)
	(IT_update_begin, IT_update_end, IT_frame_up_to_date)
	(internal_terminal_init, dos_rawgetc): Replace Display_Info with
	Mouse_HLInfo everywhere where mouse_face_* members were accessed
	for mouse highlight purposes.

	* nsterm.m (ns_update_window_begin, ns_update_window_end)
	(ns_update_end, x_destroy_window, ns_frame_up_to_date)
	(ns_dumpglyphs_box_or_relief, ns_maybe_dumpglyphs_background)
	(ns_dumpglyphs_image, ns_dumpglyphs_stretch)
	(ns_initialize_display_info, keyDown, mouseMoved, mouseExited):
	Replace Display_Info with Mouse_HLInfo everywhere where
	mouse_face_* members were accessed for mouse highlight purposes.

	* xterm.c (x_update_window_begin, x_update_window_end)
	(x_update_end, XTframe_up_to_date, x_set_mouse_face_gc)
	(handle_one_xevent, x_free_frame_resources, x_term_init): Replace
	Display_Info with Mouse_HLInfo everywhere where mouse_face_*
	members were accessed for mouse highlight purposes.
